--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -1,3 +1,27 @@
+#browser {
+    display: none;
+    margin-bottom: 0;
+}
+
+#browser #browserHeader h3 {
+    margin-top: 0;
+}
+
+#browser #browserHeader #actionBtns {
+    float: right;
+}
+
+#browsingHistory #list {
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+
+#browserBody {
+    color: black;
+    overflow: auto;
+}
+
 #browserBody table td {
     font-family: Helvetica, Arial, sans-serif;
 	font-size: 14px;
@@ -5,3 +29,13 @@
 	padding-bottom: 4px;
     text-align: left;
 }
+
+#browser.fullscreen {
+    z-index: 9999; 
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    top: 0; 
+    left: 0; 
+    border-radius: 0;
+ }
