--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -39,3 +39,8 @@
     left: 0; 
     border-radius: 0;
  }
+#browserBody #container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
