--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -1,3 +1,36 @@
+/* ==================== RDF Browser Configuration ==================== */
+#configuration.panel-body {
+    color: white;
+    background-color: rgba(70, 130, 180, 0.95);
+}
+
+#configuration.panel-body div label {
+    font-weight: bold;
+}
+
+#configuration.panel-body div p {
+    font-style: italic;
+}
+
+#configuration.panel-body #numNeighborsSlider {
+    width: 350px;
+    margin-top: 25px;
+}
+
+#configuration.panel-body #numNeighborsSlider .slider-selection {
+    background: #ec971f;
+    opacity: 0.5;
+}
+
+#configuration.panel-body #numNeighborsSlider .slider-handle {
+    background: #ec971f;
+}
+
+#configuration.panel-body #numNeighborsSlider .tooltip {
+    z-index: 0;
+}
+
+/* ==================== RDF Browser ==================== */
 #browser {
     display: none;
     margin-bottom: 0;
