--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -1,4 +1,5 @@
 /* ==================== RDF Browser Configuration ==================== */
+
 #configuration.panel-body {
     color: white;
     background-color: rgba(70, 130, 180, 0.95);
@@ -37,7 +38,9 @@
     z-index: 0;
 }
 
+
 /* ==================== RDF Browser ==================== */
+
 #browser {
     display: none;
     margin-bottom: 0;
@@ -64,23 +67,35 @@
 
 #browserBody table td {
     font-family: Helvetica, Arial, sans-serif;
-	font-size: 14px;
+    font-size: 14px;
     padding-right: 10px;
-	padding-bottom: 4px;
+    padding-bottom: 4px;
     text-align: left;
 }
 
 #browser.fullscreen {
-    z-index: 9999; 
-    width: 100%; 
-    height: 100%; 
-    position: fixed; 
-    top: 0; 
-    left: 0; 
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     border-radius: 0;
- }
+}
+
 #browserBody #container {
     position: relative;
     width: 100%;
     height: 100%;
+}
+
+#browserBody #container #nodeDetails {
+    height: calc(100% + 30px);
+    width: 30%;
+    background-color: orange;
+    opacity: 0.7;
+    position: absolute;
+    left: -15px;
+    top: -15px;
+    z-index: 9999999;
 }
