--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -89,13 +89,19 @@
     height: 100%;
 }
 
-#browserBody #container #nodeDetails {
-    height: calc(100% + 30px);
+#browserBody #container #nodeDetailsContainer {
     width: 30%;
+    height: calc(100% + 30px);
     background-color: orange;
     opacity: 0.7;
     position: absolute;
     left: -15px;
     top: -15px;
     z-index: 9999999;
+}
+
+#browserBody #container #nodeDetails {
+    width: 100%;
+    height: 100%;
+    border: 1px solid green;
 }
