--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -89,47 +89,93 @@
     height: 100%;
 }
 
-#browserBody #container #nodeDetailsContainer {
-    position: absolute;
-    left: -15px;
-    top: -15px;
-    z-index: 9999999;
-    min-width: 300px;
-    width: 30%;
-    height: calc(100% + 30px);
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    display: none;
+
+/* ==================== RDF Browser Tooltips ==================== */
+
+.sigma-tooltip {
+    max-width: 240px;
+    max-height: 280px;
+    background-color: rgb(249, 247, 237);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 6px;
 }
 
-#browserBody #container #nodeDetails {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+.sigma-tooltip-header {
+    font-variant: small-caps;
+    font-size: 120%;
+    color: #437356;
+    border-bottom: 1px solid #aac789;
     padding: 10px;
 }
 
-#browserBody #container #nodeDetails #btnGoToNode {
+.sigma-tooltip-body {
+    padding: 10px;
+}
+
+.sigma-tooltip-body th {
+    color: #999;
+    text-align: left;
+}
+
+.sigma-tooltip-footer {
+    padding: 10px;
+    border-top: 1px solid #aac789;
+}
+
+.sigma-tooltip>.arrow {
+    border-width: 10px;
     position: absolute;
-    right: 55px;
-    top: 10px;
+    display: block;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
 }
 
-#browserBody #container #nodeDetails #btnHideNodeDetails {
-    position: absolute;
-    right: 10px;
-    top: 10px;
+.sigma-tooltip.top {
+    margin-top: -12px;
 }
 
-#browserBody #container #nodeDetails #nodeDetailsHeading {
-    margin: 0;
-    margin-bottom: 15px;
-    padding: 0;
+.sigma-tooltip.top>.arrow {
+    left: 50%;
+    bottom: -10px;
+    margin-left: -10px;
+    border-top-color: rgb(249, 247, 237);
+    border-bottom-width: 0;
 }
 
-#browserBody #container #nodeDetails #nodeDetailsContent {
-    height: calc(100% - 45px);
-    overflow: auto;
+.sigma-tooltip.bottom {
+    margin-top: 12px;
+}
+
+.sigma-tooltip.bottom>.arrow {
+    left: 50%;
+    top: -10px;
+    margin-left: -10px;
+    border-bottom-color: rgb(249, 247, 237);
+    border-top-width: 0;
+}
+
+.sigma-tooltip.left {
+    margin-left: -12px;
+}
+
+.sigma-tooltip.left>.arrow {
+    top: 50%;
+    right: -10px;
+    margin-top: -10px;
+    border-left-color: rgb(249, 247, 237);
+    border-right-width: 0;
+}
+
+.sigma-tooltip.right {
+    margin-left: 12px;
+}
+
+.sigma-tooltip.right>.arrow {
+    top: 50%;
+    left: -10px;
+    margin-top: -10px;
+    border-right-color: rgb(249, 247, 237);
+    border-left-width: 0;
 }
