Adapts tooltip contents.

--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -89,7 +89,7 @@
 }
 
 #browserBody #container {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -111,6 +111,10 @@
     color: #437356;
     border-bottom: 1px solid #aac789;
     padding: 10px;
+}
+
+.sigma-tooltip-header #tooltipActionBtns {
+    float: right;
 }
 
 .sigma-tooltip-body {
@@ -184,3 +188,52 @@
     border-right-color: rgb(249, 247, 237);
     border-left-width: 0;
 }
+
+
+
+/*
+#browserBody #container #nodeDetailsContainer {
+    position: absolute;
+    left: -15px;
+    top: -15px;
+    z-index: 9999999;
+    min-width: 300px;
+    width: 30%;
+    height: calc(100% + 30px);
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    display: none;
+}
+
+#browserBody #container #nodeDetails {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 10px;
+}
+
+#browserBody #container #nodeDetails #btnGoToNode {
+    position: absolute;
+    right: 55px;
+    top: 10px;
+}
+
+#browserBody #container #nodeDetails #btnHideNodeDetails {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+#browserBody #container #nodeDetails #nodeDetailsHeading {
+    margin: 0;
+    margin-bottom: 15px;
+    padding: 0;
+}
+
+#browserBody #container #nodeDetails #nodeDetailsContent {
+    height: calc(100% - 45px);
+    overflow: auto;
+}
+*/
