--- a/src/main/webapp/css/browser.css
+++ b/src/main/webapp/css/browser.css
@@ -86,6 +86,10 @@
     float: right;
 }
 
+#browser #imgGraphExport {
+    width: 400px;
+}
+
 #browser #keyForUsedColors {
     padding: 15px;
     width: 170px;
